[gd_scene load_steps=39 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://res/TileSet.png" type="Texture" id=2]
[ext_resource path="res://Monolith.tscn" type="PackedScene" id=3]
[ext_resource path="res://Level.gd" type="Script" id=4]
[ext_resource path="res://Fairy.tscn" type="PackedScene" id=5]
[ext_resource path="res://res/Pixelmania.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://res/Sky BG 1.png" type="Texture" id=7]
[ext_resource path="res://res/Sky BG 2.png" type="Texture" id=8]
[ext_resource path="res://bumba.ogg" type="AudioStream" id=9]
[ext_resource path="res://twinkle.wav" type="AudioStream" id=10]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=10]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=11]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=12]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=13]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=14]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=15]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=16]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=17]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=18]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=19]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=20]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=21]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=22]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=23]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=24]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=25]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=26]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="TileSet" id=27]
0/name = "TileSet.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 240, 48 )
0/tile_mode = 1
0/autotile/bitmask_mode = 1
0/autotile/bitmask_flags = [ Vector2( 0, 0 ), 432, Vector2( 0, 1 ), 438, Vector2( 0, 2 ), 54, Vector2( 1, 0 ), 504, Vector2( 1, 1 ), 511, Vector2( 1, 2 ), 63, Vector2( 2, 0 ), 216, Vector2( 2, 1 ), 219, Vector2( 2, 2 ), 27, Vector2( 3, 1 ), 48, Vector2( 4, 0 ), 16, Vector2( 4, 1 ), 56, Vector2( 5, 1 ), 24, Vector2( 6, 0 ), 144, Vector2( 6, 1 ), 146, Vector2( 6, 2 ), 18, Vector2( 8, 1 ), 504, Vector2( 9, 0 ), 464, Vector2( 9, 1 ), 506, Vector2( 10, 1 ), 504, Vector2( 11, 0 ), 438, Vector2( 11, 1 ), 510, Vector2( 12, 0 ), 219, Vector2( 12, 1 ), 507, Vector2( 14, 0 ), 146, Vector2( 14, 1 ), 506 ]
0/autotile/icon_coordinate = Vector2( 4, 0 )
0/autotile/tile_size = Vector2( 16, 16 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 10 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 11 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 12 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 5, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 13 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 6, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 14 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 6, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 15 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 6, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 16 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 8, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 17 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 9, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 18 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 9, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 19 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 10, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 20 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 11, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 21 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 11, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 22 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 12, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 23 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 12, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 24 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 14, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 25 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 14, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 26 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="DynamicFont" id=28]
size = 14
font_data = ExtResource( 6 )

[node name="Level" type="Node2D"]
script = ExtResource( 4 )

[node name="Background" type="Polygon2D" parent="."]
position = Vector2( -35.1339, -132.338 )
scale = Vector2( 1.11082, 1.72506 )
color = Color( 0.270588, 0.27451, 0.494118, 1 )
polygon = PoolVector2Array( -0.555908, -0.825195, 434.32, -2.77499, 434.32, 91.8827, 435.17, 188.729, -2.10742, 189.202 )

[node name="Sprite" type="Sprite" parent="Background"]
modulate = Color( 0.341176, 0.341176, 0.341176, 1 )
position = Vector2( 209.473, 88.4273 )
scale = Vector2( 0.450118, 0.289845 )
texture = ExtResource( 7 )

[node name="Sprite2" type="Sprite" parent="Background"]
modulate = Color( 0.447059, 0.447059, 0.447059, 1 )
position = Vector2( 132.193, 78.0465 )
scale = Vector2( 0.344316, 0.275453 )
texture = ExtResource( 8 )

[node name="Monolith" parent="." instance=ExtResource( 3 )]
position = Vector2( 374.729, 114.702 )

[node name="Monolith2" parent="." instance=ExtResource( 3 )]
position = Vector2( 785.271, 66.4964 )
color = 1

[node name="Monolith3" parent="." instance=ExtResource( 3 )]
position = Vector2( 654.905, 98.828 )
color = 3

[node name="Monolith4" parent="." instance=ExtResource( 3 )]
position = Vector2( 873.018, 1.18769 )
color = 2

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 21.2002, 129.681 )

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2( -2.3811, -29.7764 )
current = true
limit_left = 0
limit_top = -750
limit_right = 1500
limit_bottom = 225
limit_smoothed = true

[node name="VisibilityNotifier2D2" type="VisibilityNotifier2D" parent="Player"]
position = Vector2( 1.59099, -0.176779 )
scale = Vector2( 1.05303, 1.37123 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 27 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -393218, 0, 0, -393217, 0, 2, -327682, 0, 11, -327681, 0, 65538, -262146, 0, 65536, -262145, 0, 65538, -196610, 0, 65536, -196609, 0, 12, -131074, 0, 11, -131073, 0, 65538, -196582, 0, 0, -196581, 0, 2, -65538, 0, 11, -65537, 0, 12, -131046, 0, 65536, -131045, 0, 65538, -2, 0, 11, -1, 0, 65538, -65510, 0, 65536, -65509, 0, 12, 65534, 0, 11, 65535, 0, 12, 26, 0, 65536, 27, 0, 65538, 131070, 0, 11, 131071, 0, 65538, 65562, 0, 65536, 65563, 0, 65538, 65565, 0, 65539, 65566, 0, 65540, 65567, 0, 65541, 65570, 0, 4, 65573, 0, 65539, 65574, 0, 65540, 65575, 0, 65540, 65576, 0, 65540, 65577, 0, 65541, 65589, 0, 65539, 65590, 0, 65540, 65591, 0, 65541, 65594, 0, 0, 65595, 0, 2, 65597, 0, 0, 65598, 0, 2, 65600, 0, 65539, 65601, 0, 65540, 65602, 0, 65541, 196606, 0, 11, 196607, 0, 12, 131098, 0, 65536, 131099, 0, 12, 131117, 0, 65539, 131118, 0, 65541, 131130, 0, 131072, 131131, 0, 131074, 131133, 0, 131072, 131134, 0, 131074, 262142, 0, 65536, 262143, 0, 65538, 196634, 0, 11, 196635, 0, 12, 196678, 0, 65539, 196679, 0, 65540, 196680, 0, 65541, 327678, 0, 65536, 327679, 0, 65538, 262170, 0, 65536, 262171, 0, 12, 393214, 0, 65536, 393215, 0, 12, 327706, 0, 131072, 327707, 0, 131074, 327728, 0, 65539, 327729, 0, 65541, 458750, 0, 65536, 458751, 0, 12, 393281, 0, 65539, 393282, 0, 65540, 393283, 0, 65540, 393284, 0, 65540, 393285, 0, 65541, 524286, 0, 11, 524287, 0, 12, 458791, 0, 0, 458792, 0, 1, 458793, 0, 65544, 458794, 0, 2, 458803, 0, 0, 458804, 0, 65546, 458805, 0, 2, 589822, 0, 65536, 589823, 0, 65538, 524298, 0, 0, 524299, 0, 65544, 524300, 0, 65546, 524301, 0, 2, 524307, 0, 0, 524308, 0, 65544, 524309, 0, 1, 524310, 0, 65544, 524311, 0, 1, 524312, 0, 65546, 524313, 0, 1, 524314, 0, 65546, 524315, 0, 65544, 524316, 0, 65544, 524317, 0, 1, 524318, 0, 65544, 524319, 0, 2, 524322, 0, 0, 524323, 0, 1, 524324, 0, 2, 524327, 0, 65536, 524328, 0, 65537, 524329, 0, 65537, 524330, 0, 12, 524333, 0, 0, 524334, 0, 65546, 524335, 0, 2, 524339, 0, 11, 524340, 0, 65537, 524341, 0, 65538, 655358, 0, 65536, 655359, 0, 65548, 589824, 0, 65546, 589825, 0, 65546, 589826, 0, 65544, 589827, 0, 2, 589829, 0, 0, 589830, 0, 65544, 589831, 0, 65546, 589832, 0, 1, 589833, 0, 65544, 589834, 0, 65547, 589835, 0, 65537, 589836, 0, 65537, 589837, 0, 65548, 589838, 0, 65546, 589839, 0, 1, 589840, 0, 2, 589843, 0, 65536, 589844, 0, 65537, 589845, 0, 65537, 589846, 0, 65537, 589847, 0, 65537, 589848, 0, 65537, 589849, 0, 65537, 589850, 0, 65537, 589851, 0, 65537, 589852, 0, 65537, 589853, 0, 65537, 589854, 0, 65537, 589855, 0, 12, 589858, 0, 65536, 589859, 0, 65537, 589860, 0, 65538, 589863, 0, 65536, 589864, 0, 65537, 589865, 0, 65537, 589866, 0, 65538, 589869, 0, 11, 589870, 0, 65537, 589871, 0, 65538, 589875, 0, 65536, 589876, 0, 65537, 589877, 0, 65548, 589878, 0, 65546, 589879, 0, 2, 720894, 0, 11, 720895, 0, 65537, 655360, 0, 65537, 655361, 0, 65537, 655362, 0, 65537, 655363, 0, 65538, 655365, 0, 11, 655366, 0, 65537, 655367, 0, 65537, 655368, 0, 65537, 655369, 0, 65537, 655370, 0, 65537, 655371, 0, 65537, 655372, 0, 65537, 655373, 0, 65537, 655374, 0, 65537, 655375, 0, 65537, 655376, 0, 65538, 655379, 0, 65536, 655380, 0, 65537, 655381, 0, 65537, 655382, 0, 65537, 655383, 0, 65537, 655384, 0, 65537, 655385, 0, 65537, 655386, 0, 65537, 655387, 0, 65537, 655388, 0, 65537, 655389, 0, 65537, 655390, 0, 65537, 655391, 0, 65538, 655394, 0, 11, 655395, 0, 65537, 655396, 0, 12, 655399, 0, 65536, 655400, 0, 65537, 655401, 0, 65537, 655402, 0, 12, 655405, 0, 11, 655406, 0, 65537, 655407, 0, 65538, 655411, 0, 11, 655412, 0, 65537, 655413, 0, 65537, 655414, 0, 65537, 655415, 0, 12, 655421, 0, 0, 655422, 0, 65546, 655423, 0, 2, 786430, 0, 65536, 786431, 0, 65537, 720896, 0, 65537, 720897, 0, 65537, 720898, 0, 65537, 720899, 0, 65538, 720901, 0, 65536, 720902, 0, 65537, 720903, 0, 65537, 720904, 0, 65537, 720905, 0, 65537, 720906, 0, 65537, 720907, 0, 65537, 720908, 0, 65537, 720909, 0, 65537, 720910, 0, 65537, 720911, 0, 65537, 720912, 0, 12, 720915, 0, 11, 720916, 0, 65537, 720917, 0, 65537, 720918, 0, 65537, 720919, 0, 65537, 720920, 0, 65537, 720921, 0, 65537, 720922, 0, 65537, 720923, 0, 65537, 720924, 0, 65537, 720925, 0, 65537, 720926, 0, 65537, 720927, 0, 12, 720930, 0, 65536, 720931, 0, 65537, 720932, 0, 65538, 720935, 0, 65536, 720936, 0, 65537, 720937, 0, 65537, 720938, 0, 65538, 720941, 0, 11, 720942, 0, 65537, 720943, 0, 12, 720947, 0, 11, 720948, 0, 65537, 720949, 0, 65537, 720950, 0, 65537, 720951, 0, 65548, 720952, 0, 65546, 720953, 0, 65544, 720954, 0, 2, 720957, 0, 65536, 720958, 0, 65537, 720959, 0, 65538, 851966, 0, 11, 851967, 0, 65537, 786432, 0, 65537, 786433, 0, 65537, 786434, 0, 65537, 786435, 0, 65538, 786437, 0, 65536, 786438, 0, 65537, 786439, 0, 65537, 786440, 0, 65537, 786441, 0, 65537, 786442, 0, 65537, 786443, 0, 65537, 786444, 0, 65537, 786445, 0, 65537, 786446, 0, 65537, 786447, 0, 65537, 786448, 0, 65538, 786451, 0, 65536, 786452, 0, 65537, 786453, 0, 65537, 786454, 0, 65537, 786455, 0, 65537, 786456, 0, 65537, 786457, 0, 65537, 786458, 0, 65537, 786459, 0, 65537, 786460, 0, 65537, 786461, 0, 65537, 786462, 0, 65537, 786463, 0, 65538, 786466, 0, 11, 786467, 0, 65537, 786468, 0, 65538, 786471, 0, 65536, 786472, 0, 65537, 786473, 0, 65537, 786474, 0, 12, 786477, 0, 65536, 786478, 0, 65537, 786479, 0, 65538, 786483, 0, 11, 786484, 0, 65537, 786485, 0, 65537, 786486, 0, 65537, 786487, 0, 65537, 786488, 0, 65537, 786489, 0, 65537, 786490, 0, 12, 786493, 0, 11, 786494, 0, 65537, 786495, 0, 12, 917502, 0, 65536, 917503, 0, 65537, 851968, 0, 65537, 851969, 0, 65537, 851970, 0, 65537, 851971, 0, 65538, 851973, 0, 11, 851974, 0, 65537, 851975, 0, 65537, 851976, 0, 65537, 851977, 0, 65537, 851978, 0, 65537, 851979, 0, 65537, 851980, 0, 65537, 851981, 0, 65537, 851982, 0, 65537, 851983, 0, 65537, 851984, 0, 65538, 851987, 0, 65536, 851988, 0, 65537, 851989, 0, 65537, 851990, 0, 65537, 851991, 0, 65537, 851992, 0, 65537, 851993, 0, 65537, 851994, 0, 65537, 851995, 0, 65537, 851996, 0, 65537, 851997, 0, 65537, 851998, 0, 65537, 851999, 0, 65538, 852002, 0, 11, 852003, 0, 65537, 852004, 0, 12, 852007, 0, 65536, 852008, 0, 65537, 852009, 0, 65537, 852010, 0, 12, 852013, 0, 11, 852014, 0, 65537, 852015, 0, 12, 852019, 0, 65536, 852020, 0, 65537, 852021, 0, 65537, 852022, 0, 65537, 852023, 0, 65537, 852024, 0, 65537, 852025, 0, 65537, 852026, 0, 12, 852029, 0, 65536, 852030, 0, 65537, 852031, 0, 12, 983038, 0, 131072, 983039, 0, 131073, 917504, 0, 131073, 917505, 0, 131073, 917506, 0, 131073, 917507, 0, 131074, 917509, 0, 131072, 917510, 0, 131073, 917511, 0, 131073, 917512, 0, 131073, 917513, 0, 131073, 917514, 0, 131073, 917515, 0, 131073, 917516, 0, 131073, 917517, 0, 131073, 917518, 0, 131073, 917519, 0, 131073, 917520, 0, 131074, 917523, 0, 131072, 917524, 0, 131073, 917525, 0, 131073, 917526, 0, 131073, 917527, 0, 131073, 917528, 0, 131073, 917529, 0, 131073, 917530, 0, 131073, 917531, 0, 131073, 917532, 0, 131073, 917533, 0, 131073, 917534, 0, 131073, 917535, 0, 131074, 917538, 0, 131072, 917539, 0, 131073, 917540, 0, 131074, 917543, 0, 131072, 917544, 0, 131073, 917545, 0, 131073, 917546, 0, 131074, 917549, 0, 131072, 917550, 0, 131073, 917551, 0, 131074, 917555, 0, 131072, 917556, 0, 131073, 917557, 0, 131073, 917558, 0, 131073, 917559, 0, 131073, 917560, 0, 131073, 917561, 0, 131073, 917562, 0, 131074, 917565, 0, 131072, 917566, 0, 131073, 917567, 0, 131074 )

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 0, 0, 0, 1 )

[node name="Fairy1" parent="." instance=ExtResource( 5 )]
position = Vector2( 144.82, 124.782 )
frame = 0

[node name="Fairy2" parent="." instance=ExtResource( 5 )]
position = Vector2( 567.305, 111.624 )
frame = 3
color = 1

[node name="Fairy3" parent="." instance=ExtResource( 5 )]
position = Vector2( 488.349, 0.964729 )
frame = 3
color = 3

[node name="Fairy4" parent="." instance=ExtResource( 5 )]
position = Vector2( 743.266, 111.387 )
color = 2

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -84.0
margin_top = -65.5
margin_right = 84.0
margin_bottom = -38.5
custom_fonts/font = SubResource( 28 )
text = "COMPLETE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )
autoplay = true

[node name="Twinkle" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )
[connection signal="touch" from="Monolith" to="." method="_on_Monolith_touch"]
[connection signal="touch" from="Monolith2" to="." method="_on_Monolith_touch"]
[connection signal="touch" from="Monolith3" to="." method="_on_Monolith_touch"]
[connection signal="touch" from="Monolith4" to="." method="_on_Monolith_touch"]
[connection signal="screen_exited" from="Player/VisibilityNotifier2D2" to="." method="_on_VisibilityNotifier2D2_screen_exited"]
[connection signal="eaten" from="Fairy1" to="Player" method="_on_Fairy_eaten"]
[connection signal="eaten" from="Fairy2" to="Player" method="_on_Fairy_eaten"]
[connection signal="eaten" from="Fairy3" to="Player" method="_on_Fairy_eaten"]
[connection signal="eaten" from="Fairy4" to="Player" method="_on_Fairy_eaten"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
